# slm-sim

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: vortex_beam.py
src/slm_sim/: __init__.py
src/slm_sim/core/: __init__.py  beam.py  physics.py  propagator.py
src/slm_sim/utils/: __init__.py  arrays.py  fft.py  io.py  logger.py
src/slm_sim/visualization/: __init__.py  plots.py
